Add metadata to UPS services and refactoring